...
object TestTags {

  const val TOP_LEVEL_DESTINATION = "Top Level Destination %s"

  object Components {

    const val PERSISTENT_SCAFFOLD = "Persistent Scaffold"
    const val MEDIA_LIST_CONTENT = "Media List Content"
    const val MEDIA_GRID_CONTENT = "Media Grid Content - Mode %s"
    const val SCROLLABLE_CONTENT = "Scrollable Content"
    const val PULL_TO_REFRESH = "Pull to refresh"
    const val POSTER_IMAGE = "Poster image"

...

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

  const val LAZY_COLUMN = "Lazy Column"

  const val VIEW_ALL = "View All Button"

  object Rating {
...

  object Profile {
    const val CONTENT = "Profile Content"
  }

  object Details {
    const val COLLAPSIBLE_LAYOUT = "Details Collapsible Layout"

    const val RATE_THIS_BUTTON = "Rate This Button"
    const val YOUR_RATING = "Details Your Rating %s"
    const val RATE_DIALOG = "Details Rate Dialog"
    const val RATE_SLIDER = "Details Rate Slider"

    const val WATCH_TRAILER = "Details Watch Trailer Button"

    object About {
      const val FORM = "Details About Form"
    }

    object Recommendations {
      const val EMPTY = "Details Recommendations Empty"
      const val FORM = "Details Recommendations Form"
    }

    object Cast {
      const val FORM = "Details Cast Form"
      const val EMPTY = "Details Cast Empty"
...
