package com.divinelink.feature.details

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToNode
import androidx.compose.ui.test.performTouchInput
import androidx.compose.ui.test.swipeRight
import androidx.compose.ui.test.swipeUp
import com.divinelink.core.data.details.model.RecommendedException
import com.divinelink.core.domain.components.SwitchViewButtonViewModel
import com.divinelink.core.domain.credits.SpoilersObfuscationUseCase
import com.divinelink.core.fixtures.data.preferences.TestPreferencesRepository
import com.divinelink.core.fixtures.details.credits.SeriesCastFactory
import com.divinelink.core.fixtures.details.review.ReviewFactory
import com.divinelink.core.fixtures.details.season.SeasonFactory
import com.divinelink.core.fixtures.model.account.AccountMediaDetailsFactory
import com.divinelink.core.fixtures.model.details.MediaDetailsFactory
import com.divinelink.core.fixtures.model.jellyseerr.media.JellyseerrMediaInfoFactory
import com.divinelink.core.fixtures.model.jellyseerr.media.JellyseerrRequestFactory
import com.divinelink.core.fixtures.model.jellyseerr.media.JellyseerrRequestFactory.Tv.betterCallSaul2
import com.divinelink.core.fixtures.model.jellyseerr.media.JellyseerrRequestFactory.Tv.betterCallSaul3
import com.divinelink.core.fixtures.model.jellyseerr.request.JellyseerrMediaRequestResponseFactory
import com.divinelink.core.fixtures.model.jellyseerr.server.radarr.RadarrInstanceDetailsFactory
import com.divinelink.core.fixtures.model.jellyseerr.server.radarr.RadarrInstanceFactory
import com.divinelink.core.fixtures.model.jellyseerr.server.sonarr.SonarrInstanceDetailsFactory
import com.divinelink.core.fixtures.model.jellyseerr.server.sonarr.SonarrInstanceFactory
import com.divinelink.core.fixtures.model.media.MediaItemFactory
import com.divinelink.core.model.ScreenType
import com.divinelink.core.model.details.DetailActionItem
import com.divinelink.core.model.details.media.MediaDetailsResult
import com.divinelink.core.model.details.rating.RatingDetails
import com.divinelink.core.model.details.rating.RatingSource
import com.divinelink.core.model.jellyseerr.media.JellyseerrStatus
import com.divinelink.core.model.media.MediaType
import com.divinelink.core.model.preferences.DetailPreferences
import com.divinelink.core.model.tab.MovieTab
import com.divinelink.core.model.tab.TvTab
import com.divinelink.core.navigation.route.Navigation
import com.divinelink.core.navigation.route.Navigation.CreditsRoute
import com.divinelink.core.testing.ComposeTest
import com.divinelink.core.testing.MainDispatcherRule
import com.divinelink.core.testing.factories.details.credits.AggregatedCreditsFactory
import com.divinelink.core.testing.repository.TestAuthRepository
import com.divinelink.core.testing.repository.TestDetailsRepository
import com.divinelink.core.testing.repository.TestJellyseerrRepository
import com.divinelink.core.testing.repository.TestMediaRepository
import com.divinelink.core.testing.setVisibilityScopeContent
import com.divinelink.core.testing.storage.FakePreferenceStorage
import com.divinelink.core.testing.uiTest
import com.divinelink.core.testing.usecase.FakeAddToWatchlistUseCase
import com.divinelink.core.testing.usecase.FakeDeleteRatingUseCase
import com.divinelink.core.testing.usecase.FakeFetchAccountMediaDetailsUseCase
import com.divinelink.core.testing.usecase.FakeGetMediaDetailsUseCase
import com.divinelink.core.testing.usecase.FakeRequestMediaUseCase
import com.divinelink.core.testing.usecase.FakeSubmitRatingUseCase
import com.divinelink.core.testing.usecase.TestDeleteMediaUseCase
import com.divinelink.core.testing.usecase.TestDeleteRequestUseCase
import com.divinelink.core.testing.usecase.TestFetchAllRatingsUseCase
import com.divinelink.core.testing.usecase.TestGetServerInstanceDetailsUseCase
import com.divinelink.core.testing.usecase.TestGetServerInstancesUseCase
import com.divinelink.core.testing.usecase.TestMarkAsFavoriteUseCase
import com.divinelink.core.testing.usecase.TestSpoilersObfuscationUseCase
import com.divinelink.core.ui.TestTags
import com.divinelink.core.ui.UiString
import com.divinelink.core.ui.menu.DropdownMenuViewModel
import com.divinelink.core.ui.resources.core_ui_add_rating
import com.divinelink.core.ui.resources.core_ui_delete
import com.divinelink.core.ui.resources.core_ui_navigate_up_button_content_description
import com.divinelink.core.ui.resources.core_ui_view_all
import com.divinelink.feature.add.to.account.resources.submit_rating_button
import com.divinelink.feature.details.media.ui.DetailsScreen
import com.divinelink.feature.details.media.ui.DetailsViewModel
import com.divinelink.feature.details.resources.Res
import com.divinelink.feature.details.resources.feature_details_manage_movie
import com.divinelink.feature.details.resources.feature_details_manage_tv
import com.divinelink.feature.details.resources.feature_details_request
import com.divinelink.feature.request.media.RequestMediaEntryData
import com.divinelink.feature.request.media.RequestMediaViewModel
import io.kotest.matchers.shouldBe
import kotlinx.coroutines.channels.Channel
import kotlinx.coroutines.flow.flowOf
import org.jetbrains.compose.resources.getString
import org.junit.Rule
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.test.mock.declare
import kotlin.test.AfterTest
import kotlin.test.BeforeTest
import kotlin.test.Test
import com.divinelink.feature.add.to.account.resources.Res as AccountRes

class DetailsScreenTest : ComposeTest() {

  @get:Rule
  val mainDispatcherRule = MainDispatcherRule()

  private val getMovieDetailsUseCase = FakeGetMediaDetailsUseCase()
  private val markAsFavoriteUseCase = TestMarkAsFavoriteUseCase()
  private val fetchAccountMediaDetailsUseCase = FakeFetchAccountMediaDetailsUseCase()
  private val submitRateUseCase = FakeSubmitRatingUseCase()
  private val deleteRatingUseCase = FakeDeleteRatingUseCase()
  private val addToWatchlistUseCase = FakeAddToWatchlistUseCase()
  private val requestMediaUseCase = FakeRequestMediaUseCase()
  private val fetchAllRatingsUseCase = TestFetchAllRatingsUseCase()
  private val spoilersObfuscationUseCase = TestSpoilersObfuscationUseCase().useCase()
  private val deleteRequestUseCase = TestDeleteRequestUseCase()
  private val deleteMediaUseCase = TestDeleteMediaUseCase()
  private val authRepository = TestAuthRepository()
  private val detailsRepository = TestDetailsRepository()

  private val preferencesRepository = TestPreferencesRepository(
    detailPreferences = DetailPreferences.initial.copy(
      streamingServicesVisible = false,
    ),
  )
  private val switchViewButtonViewModel = SwitchViewButtonViewModel(
    repository = preferencesRepository,
  )

  @BeforeTest
  fun setup() {
    startKoin {
      // Do nothing
    }
    declare {
      DropdownMenuViewModel(
        entryPoint = ScreenType.Movie(
          id = MediaDetailsFactory.FightClub().id,
          name = MediaDetailsFactory.FightClub().title,
        ),
        spoilersObfuscationUseCase = SpoilersObfuscationUseCase(
          preferenceStorage = FakePreferenceStorage(spoilersObfuscation = true),
          dispatcherProvider = mainDispatcherRule.testDispatcher,
        ),
      )
    }
  }

  @AfterTest
  fun tearDown() {
    stopKoin()
  }

  @Test
  fun `test switch between movie tabs`() = uiTest {
    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
        Result.success(
          MediaDetailsResult.RecommendedSuccess(
            similar = MediaItemFactory.MoviesList(),
            formOrder = MovieTab.Recommendations.order,
          ),
        ),
        Result.success(
          MediaDetailsResult.ReviewsSuccess(
            reviews = ReviewFactory.all(),
            formOrder = MovieTab.Reviews.order,
          ),
        ),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 0,
      mediaType = MediaType.MOVIE.value,
      isFavorite = false,
    )

    val viewModel = DetailsViewModel(
      getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
      onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
      submitRatingUseCase = submitRateUseCase.mock,
      deleteRatingUseCase = deleteRatingUseCase.mock,
      addToAccountUseCase = addToWatchlistUseCase.mock,
      spoilersObfuscationUseCase = spoilersObfuscationUseCase,
      fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
      deleteRequestUseCase = deleteRequestUseCase.mock,
      deleteMediaUseCase = deleteMediaUseCase.mock,
      authRepository = authRepository.mock,
      repository = detailsRepository.mock,
      preferencesRepository = preferencesRepository,
      route = route,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    onNodeWithTag(TestTags.Components.PERSISTENT_SCAFFOLD).assertIsDisplayed()

    // Add swipe up to avoid overlapping of tabs with bottom navigation
    onNodeWithTag(TestTags.Details.COLLAPSIBLE_LAYOUT).performTouchInput {
      swipeUp(
        startY = 200f,
        endY = 50f,
      )
    }

    onNodeWithTag(TestTags.Tabs.TAB_ITEM.format(MovieTab.Recommendations.value))
      .assertIsDisplayed()
      .performClick()

    onNodeWithTag(TestTags.Details.Recommendations.FORM).assertIsDisplayed()

    onNodeWithTag(TestTags.Tabs.TAB_ITEM.format(MovieTab.Reviews.value))
      .assertIsDisplayed()
      .performClick()

    onNodeWithTag(TestTags.Details.Reviews.FORM).assertIsDisplayed()
  }

  @Test
  fun `test switch between movie tabs with error`() = uiTest {
    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
        Result.failure(RecommendedException(MovieTab.Recommendations.order)),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 0,
      isFavorite = false,
      mediaType = MediaType.MOVIE.value,
    )

    val viewModel = DetailsViewModel(
      getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
      onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
      submitRatingUseCase = submitRateUseCase.mock,
      deleteRatingUseCase = deleteRatingUseCase.mock,
      addToAccountUseCase = addToWatchlistUseCase.mock,
      spoilersObfuscationUseCase = spoilersObfuscationUseCase,
      fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
      deleteRequestUseCase = deleteRequestUseCase.mock,
      deleteMediaUseCase = deleteMediaUseCase.mock,
      authRepository = authRepository.mock,
      repository = detailsRepository.mock,
      preferencesRepository = preferencesRepository,
      route = route,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    onNodeWithTag(TestTags.Components.PERSISTENT_SCAFFOLD).assertIsDisplayed()

    // Add swipe up to avoid overlapping of tabs with bottom navigation
    onNodeWithTag(TestTags.Details.COLLAPSIBLE_LAYOUT).performTouchInput {
      swipeUp(
        startY = 200f,
        endY = 50f,
      )
    }

    onNodeWithTag(TestTags.Tabs.TAB_ITEM.format(MovieTab.Recommendations.value))
      .assertIsDisplayed()
      .performClick()

    onNodeWithTag(TestTags.Details.Recommendations.FORM).assertIsNotDisplayed()
    onNodeWithTag(TestTags.BLANK_SLATE).assertIsDisplayed()
  }

  @Test
  fun `test empty reviews for movies`() = uiTest {
    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
        Result.success(
          MediaDetailsResult.ReviewsSuccess(
            reviews = emptyList(),
            formOrder = MovieTab.Reviews.order,
          ),
        ),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 0,
      isFavorite = false,
      mediaType = MediaType.MOVIE.value,
    )

    val viewModel = DetailsViewModel(
      getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
      onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
      submitRatingUseCase = submitRateUseCase.mock,
      deleteRatingUseCase = deleteRatingUseCase.mock,
      addToAccountUseCase = addToWatchlistUseCase.mock,
      spoilersObfuscationUseCase = spoilersObfuscationUseCase,
      fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
      deleteRequestUseCase = deleteRequestUseCase.mock,
      deleteMediaUseCase = deleteMediaUseCase.mock,
      authRepository = authRepository.mock,
      repository = detailsRepository.mock,
      preferencesRepository = preferencesRepository,
      route = route,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    onNodeWithTag(TestTags.Components.PERSISTENT_SCAFFOLD).assertIsDisplayed()

    // Add swipe up to avoid overlapping of tabs with bottom navigation
    onNodeWithTag(TestTags.Details.COLLAPSIBLE_LAYOUT).performTouchInput {
      swipeUp(
        startY = 100f,
        endY = 50f,
      )
    }

    onNodeWithTag(TestTags.Details.COLLAPSIBLE_LAYOUT).performTouchInput {
      swipeUp(
        startY = 100f,
        endY = 80f,
      )
    }

    onNodeWithTag(TestTags.Tabs.TAB_ITEM.format(MovieTab.Reviews.value))
      .assertIsDisplayed()
      .performClick()

    onNodeWithTag(TestTags.Details.Reviews.EMPTY).assertIsDisplayed()
  }

  @Test
  fun navigateToAnotherDetailsScreen() = uiTest {
    var detailsRoute: Navigation.DetailsRoute? = null

    fetchAccountMediaDetailsUseCase.mockFetchAccountDetails(
      response = flowOf(
        Result.success(AccountMediaDetailsFactory.Rated()),
      ),
    )

    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
        Result.success(
          MediaDetailsResult.RecommendedSuccess(
            similar = MediaItemFactory.MoviesList(),
            formOrder = MovieTab.Recommendations.order,
          ),
        ),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 0,
      isFavorite = false,
      mediaType = MediaType.MOVIE.value,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {
          if (it is Navigation.DetailsRoute) {
            detailsRoute = it
          }
        },
        switchViewButtonViewModel = switchViewButtonViewModel,
        viewModel = DetailsViewModel(
          getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
          onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
          submitRatingUseCase = submitRateUseCase.mock,
          deleteRatingUseCase = deleteRatingUseCase.mock,
          addToAccountUseCase = addToWatchlistUseCase.mock,
          spoilersObfuscationUseCase = spoilersObfuscationUseCase,
          fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
          deleteRequestUseCase = deleteRequestUseCase.mock,
          deleteMediaUseCase = deleteMediaUseCase.mock,
          authRepository = authRepository.mock,
          repository = detailsRepository.mock,
          preferencesRepository = preferencesRepository,
          route = route,
        ),
        animatedVisibilityScope = this,
      )
    }

    onNodeWithTag(TestTags.Details.COLLAPSIBLE_LAYOUT).performTouchInput {
      swipeUp(
        startY = 200f,
        endY = 80f,
      )
    }

    onNodeWithTag(TestTags.Tabs.TAB_ITEM.format(MovieTab.Recommendations.value)).performClick()

    onNodeWithTag(TestTags.Details.Recommendations.FORM)
      .assertIsDisplayed()
      .performScrollToNode(
        matcher = hasText(MediaItemFactory.MoviesList()[0].name),
      )

    onNodeWithTag(TestTags.Details.COLLAPSIBLE_LAYOUT).performTouchInput {
      swipeUp(
        startY = 100f,
        endY = 50f,
      )
    }

    onNodeWithText(MediaItemFactory.MoviesList()[0].name)
      .assertIsDisplayed()
      .performClick()

    val navigateUpContentDescription = getString(
      UiString.core_ui_navigate_up_button_content_description,
    )

    onNodeWithContentDescription(navigateUpContentDescription)
      .performClick()

    detailsRoute shouldBe Navigation.DetailsRoute(
      id = MediaItemFactory.MoviesList()[0].id,
      mediaType = MediaItemFactory.MoviesList()[0].mediaType.value,
      isFavorite = false,
    )
  }

  @Test
  fun `test rate dialog is visible when your rating is clicked`() = uiTest {
    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.AccountDetailsSuccess(
            accountDetails = AccountMediaDetailsFactory.Rated(),
          ),
        ),
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 0,
      isFavorite = false,
      mediaType = MediaType.MOVIE.value,
    )

    val viewModel = DetailsViewModel(
      getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
      onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
      submitRatingUseCase = submitRateUseCase.mock,
      deleteRatingUseCase = deleteRatingUseCase.mock,
      addToAccountUseCase = addToWatchlistUseCase.mock,
      spoilersObfuscationUseCase = spoilersObfuscationUseCase,
      fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
      deleteRequestUseCase = deleteRequestUseCase.mock,
      deleteMediaUseCase = deleteMediaUseCase.mock,
      authRepository = authRepository.mock,
      repository = detailsRepository.mock,
      preferencesRepository = preferencesRepository,
      route = route,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    onAllNodesWithTag(
      testTag = TestTags.Details.RATE_THIS_BUTTON,
      useUnmergedTree = true,
    ).onFirst()
      .performClick()

    onNodeWithTag(
      TestTags.Details.RATE_DIALOG,
    ).assertIsDisplayed()
  }

  @Test
  fun `test rate dialog onSubmitRate`() = uiTest {
    fetchAccountMediaDetailsUseCase.mockFetchAccountDetails(
      response = flowOf(Result.success(AccountMediaDetailsFactory.NotRated())),
    )

    submitRateUseCase.mockSubmitRate(response = Result.success(Unit))

    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 0,
      isFavorite = false,
      mediaType = MediaType.MOVIE.value,
    )

    val viewModel = DetailsViewModel(
      getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
      onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
      submitRatingUseCase = submitRateUseCase.mock,
      deleteRatingUseCase = deleteRatingUseCase.mock,
      addToAccountUseCase = addToWatchlistUseCase.mock,
      spoilersObfuscationUseCase = spoilersObfuscationUseCase,
      fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
      deleteRequestUseCase = deleteRequestUseCase.mock,
      deleteMediaUseCase = deleteMediaUseCase.mock,
      authRepository = authRepository.mock,
      repository = detailsRepository.mock,
      preferencesRepository = preferencesRepository,
      route = route,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
        switchViewButtonViewModel = switchViewButtonViewModel,
        animatedVisibilityScope = this,
      )
    }

    val addRatingText = getString(UiString.core_ui_add_rating)

    onAllNodesWithTag(TestTags.Details.YOUR_RATING, useUnmergedTree = true)
      .onFirst()
      .assertDoesNotExist()

    onAllNodesWithText(
      text = addRatingText,
      useUnmergedTree = true,
    )
      .onFirst()
      .assertIsDisplayed()
      .performClick()

    onAllNodesWithTag(TestTags.Details.RATE_DIALOG)
      .onFirst()
      .assertIsDisplayed()

    onAllNodesWithTag(
      TestTags.Details.RATE_SLIDER,
    )
      .onFirst()
      .assertExists()
      .performTouchInput {
        swipeRight()
      }

    val submitRatingText = getString(AccountRes.string.submit_rating_button)

    onNodeWithText(submitRatingText).performClick()

    onNodeWithTag(
      TestTags.Details.YOUR_RATING.format("9"),
      useUnmergedTree = true,
    ).assertIsDisplayed()
  }

  @Test
  fun `test navigate to credits screen with tv credits`() = uiTest {
    // Initial navigation to DETAILS screen
    var creditsRoute: CreditsRoute? = null

    getMovieDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.TheOffice(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
        Result.success(
          MediaDetailsResult.CreditsSuccess(
            aggregateCredits = AggregatedCreditsFactory.credits(),
          ),
        ),
      ),
    )

    val route = Navigation.DetailsRoute(
      id = 2316,
      isFavorite = false,
      mediaType = MediaType.TV.value,
    )

    setVisibilityScopeContent {
      DetailsScreen(
        route = route,
        onNavigate = {
          if (it is CreditsRoute) {
            creditsRoute = it
          }
        },
        switchViewButtonViewModel = switchViewButtonViewModel,
        viewModel = DetailsViewModel(
          getMediaDetailsUseCase = getMovieDetailsUseCase.mock,
          onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
          submitRatingUseCase = submitRateUseCase.mock,
          deleteRatingUseCase = deleteRatingUseCase.mock,
          addToAccountUseCase = addToWatchlistUseCase.mock,
          spoilersObfuscationUseCase = spoilersObfuscationUseCase,
          fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
          deleteRequestUseCase = deleteRequestUseCase.mock,
          deleteMediaUseCase = deleteMediaUseCase.mock,
          authRepository = authRepository.mock,
          repository = detailsRepository.mock,
          preferencesRepository = preferencesRepository,
          route = route,
        ),
        animatedVisibilityScope = this,
      )
    }

